k8s/LocalizationService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localizationservice
  labels:
    app: localizationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localizationservice
  template:
    metadata:
      labels:
        app: localizationservice
    spec:
      containers:
        - name: localizationservice
          image: localizationservice:latest
          ports:
            - containerPort: 8080
