k8s/LocalizationService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localizationservice
  labels:
    app: localizationservice
spec:
  type: ClusterIP
  selector:
    app: localizationservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
