k8s/LocalizationService/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: localizationservice
spec:
  hosts:
    - "localizationservice.local"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: localizationservice
            port:
              number: 8080
